# poker_schedule

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
apps/exports/: apps.py  urls.py  views.py
apps/filters/: admin.py  apps.py  filters.py  models.py  sort.py  test_sharing.py  tests.py  urls.py  views.py
apps/filters/migrations/: 0001_initial.py
apps/rooms/: admin.py  apps.py  models.py  tests.py
apps/rooms/migrations/: 0001_initial.py  0002_seed_mvp_rooms.py  0003_alter_pokerroom_is_active_alter_pokerroom_slug.py  0004_pokerroom_image.py  0005_pokerroom_horizon_days.py  0006_pokerok_horizon_7.py
apps/scrapers/: apps.py  base.py  dto.py  registry.py  tests.py  upsert.py
apps/scrapers/adapters/: __init__.py  pokerok.py
apps/scrapers/fixtures/: pokerok.json
apps/tournaments/: admin.py  apps.py  columns.py  forms.py  models.py  recurrence.py  resources.py  table_state.py  test_forms.py  test_import_export.py  test_scrape_ingest.py  test_views.py  tests.py  urls.py  views.py  xlsx_export.py
apps/tournaments/migrations/: 0001_initial.py  0002_drop_scraper_fields.py  0002_seed_options.py  0003_periodicity.py  0003_tournament_submitted_for_review_and_more.py  0004_remove_tournament_submitted_for_review.py  0005_tournament_timezone.py  0016_verbose_name_units.py  (+30 more)
apps/users/: adapter.py  admin.py  admin_mixins.py  apps.py  audit_context.py  forms.py  mfa_check.py  middleware.py  models.py  signals.py  test_audit_log.py  test_break_glass_transfer.py  test_mfa_reminder.py  test_promote_cli.py  test_roles.py  test_single_superadmin.py  tests.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
static/css/: public_columns.css
static/js/: localize_times.js  prune_expired.js  public_columns.js  show_password.js  sticky_hscroll.js  sticky_thead.js  table_prefs.js
templates/: base.html  home.html
templates/account/: base.html
templates/admin/: base_site.html
templates/exports/: tournament_list.html
templates/filters/: shared.html
templates/tournaments/: _tournament_filter.html  _tournament_table.html  tournament_list.html
templates/users/: profile.html
tests/: test_admin.py  test_smoke.py
(+45 files in other folders)
